--- a/stock_picking_extended/views/stock_picking_menu.xml
+++ b/stock_picking_extended/views/stock_picking_menu.xml
@@ -6,5 +6,8 @@
             <field name="groups_id" eval="[(6, 0, [ref('base.group_reporting')])]" />
         </record>
 
+        <menuitem name="Order Board" action="action_view_stock_picking" id="menu_view_stock_picking"
+                  parent="stock.menu_stock_warehouse_mgmt" sequence="1"/>
+
     </data>
 </openerp>
