--- a/stock_picking_extended/views/stock_picking_menu.xml
+++ b/stock_picking_extended/views/stock_picking_menu.xml
@@ -3,11 +3,15 @@
     <data>
 
         <record id="stock.next_id_61" model="ir.ui.menu">
-            <field name="groups_id" eval="[(6, 0, [ref('base.group_reporting')])]" />
+            <field name="groups_id" eval="[(6, 0, [ref('base.group_reporting')])]"/>
         </record>
 
+        <menuitem name="Order Board" id="menu_order_board"
+                  parent="stock.menu_stock_root" sequence="1" groups="view_order_board">
+        </menuitem>
+
         <menuitem name="Order Board" action="action_view_stock_picking" id="menu_view_stock_picking"
-                  parent="stock.menu_stock_warehouse_mgmt" sequence="1"/>
+                  parent="menu_order_board" sequence="1"/>
 
     </data>
 </openerp>
