Fixed domain and added green color

--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -210,7 +210,7 @@
             <field name="model">stock.picking</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
-                <tree string="Order Board">
+                <tree string="Order Board" colors="green:order_ready">
                     <field name="sale_id"/>
                     <field name="customer_id"/>
                     <field name="note"/>
@@ -225,7 +225,7 @@
         </record>
 
         <record id="action_view_stock_picking" model="ir.actions.act_window">
-            <field name="domain">[('sale_id', '!=', False), ('state', 'not in', ('done', 'cancel')), ('type', 'in', ('internal', 'out'))]</field>
+            <field name="domain">[('sale_id', '!=', False), ('state', '!=', 'cancel'), ('type', 'in', ('internal', 'out')), ('ddt_number', '=', False)]</field>
             <field name="context">{'nodelete': '1', 'nocreate': '1', 'noduplicate': '1'}</field>
             <field name="name">Order Board</field>
             <field name="res_model">stock.picking</field>
