--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -48,7 +48,7 @@
                     <field name="name" readonly="1"/>
                     <field name="origin" readonly="1"/>
                     <field name="date"/>
-                    <field name="min_date" readonly="1"/>
+                    <field name="minimum_planned_date" readonly="1"/>
                     <field name="invoice_state"/>
                     <field name="backorder_id" readonly="1" groups="base.group_extended"/>
                 </field>
@@ -130,7 +130,7 @@
                     <filter icon="gtk-ok" name="available" string="Goods Ready" domain="[('goods_ready','=', True)]" />
                     <field name="sale_id" filter_domain="['|',('sale_id','ilike',self),('origin','ilike',self)]"/>
                     <field name="customer_id"/>
-                    <field name="min_date"/>
+                    <field name="minimum_planned_date"/>
                     <field name="week_nbr" />
                 </search>
             </field>
@@ -153,7 +153,7 @@
                         </group>
 
                         <group col="4" colspan="2">
-                            <field name="min_date"/>
+                            <field name="minimum_planned_date"/>
                             <field name="order_type"/>
                             <field name="order_sent"/>
                             <field name="order_ready"/>
@@ -214,7 +214,7 @@
                     <field name="sale_id"/>
                     <field name="customer_id"/>
                     <field name="note"/>
-                    <field name="min_date"/>
+                    <field name="minimum_planned_date"/>
                     <field name="week_nbr" />
                     <field name="order_type" />
                     <field name="order_sent" />
