--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -9,6 +9,7 @@
             <field name="arch" type="xml">
                 <form string="Order Requirement">
                     <field name="product_id"/>
+                    <field name="new_product_id"/>
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="order_id" />
@@ -26,6 +27,7 @@
                     colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                     <field name="row_color" invisible="1"/>
                     <field name="product_id"/>
+                    <field name="new_product_id"/>
                     <field name="qty" />
                     <field name="stock_availability"/>
                     <field name="spare"/>
