--- a/sale_order_requirement/views/order_requirement_line_suppliers.xml
+++ b/sale_order_requirement/views/order_requirement_line_suppliers.xml
@@ -8,15 +8,13 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <form string="Suppliers">
-                    <field name="product_id" on_change="onchange_product_id(product_id,qty,supplier_id)"/>
+                    <field context="" name="product_id" on_change="onchange_product_id(product_id,qty,supplier_id,context)"/>
                     <newline />
                     <field name="supplier_id"/>
                     <newline />
                     <newline />
                     <field name="qty" />
                     <newline />
-                    <!--<label string="Open BOM" />-->
-                    <!--<button name="action_open_bom" icon="gtk-find" type="object" colspan="1"/>-->
 
                     <group colspan="8" col="8" states="draft">
                         <button name="confirm_qty_supplier" string="OK" type="object" icon="gtk-check"/>
@@ -26,7 +24,6 @@
                     <field name="state" invisible="1"></field>
                     <field name="view_bom" invisible="1"></field>
 
-                    <!-- Dove si mette il field_parent in questo caso? -->
                     <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="2" attrs="{'invisible': [('view_bom','=',False)]}">
                         <tree string="BoM Structure" editable="top" create="0"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
