--- a/sale_order_requirement/views/order_requirement_line_suppliers.xml
+++ b/sale_order_requirement/views/order_requirement_line_suppliers.xml
@@ -30,7 +30,7 @@
                             <field name="row_color" invisible="1"/>
                             <field name="sequence" invisible="1"/>
                             <field name="complete_name"/>
-                            <field name="product_id" on_change="onchange_product_id(product_id,product_qty,supplier_id)"/>
+                            <field name="product_id" on_change="onchange_children_product_id(product_id,product_qty,supplier_id)"/>
                             <field name="product_type" />
                             <field name="product_qty" readonly="1"/>
                             <field name="product_uom" readonly="1"/>
