--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -9,11 +9,30 @@
             <field name="arch" type="xml">
                 <form string="Order Requirement">
                     <field name="product_id"/>
-                    <field name="new_product_id"/>
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="order_id" />
                     <field name="state" />
+                    <field name="new_product_id"/>
+                    <field name="supplier_id"/>
+                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="2" attrs="{'invisible': [('view_bom','=',False)]}">
+                        <tree string="BoM Structure" editable="top" create="0"
+                            colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
+                            <field name="row_color" invisible="1"/>
+                            <field name="sequence" invisible="1"/>
+                            <field name="complete_name"/>
+                            <field name="product_id" on_change="onchange_children_product_id(product_id,product_qty,supplier_id)"/>
+                            <field name="product_type" />
+                            <field name="product_qty" readonly="1"/>
+                            <field name="product_uom" readonly="1"/>
+                            <field name="stock_availability"/>
+                            <field name="spare"/>
+                            <field name="is_manufactured" on_change="onchange_manufacture()"/>
+                            <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)], 'readonly': [('is_manufactured', '=', True)]}"/>
+                            <field name="supplier_ids" invisible="1"/>
+                        </tree>
+                    </field>
+
                 </form>
            </field>
         </record>
