--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -8,14 +8,17 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <form string="Order Requirement">
-                    <field name="product_id"/>
+                    <field context="" name="product_id"/>
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="order_id" />
                     <field name="state" />
-                    <field name="new_product_id"/>
+                    <newline/>
+                    <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,supplier_id,context)"/>
+                    <field name="qty"/>
                     <field name="supplier_id"/>
-                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="2" attrs="{'invisible': [('view_bom','=',False)]}">
+                    <field name="view_bom"/>
+                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4"> <!-- attrs="{'invisible': [('view_bom','=',False)]}"> -->
                         <tree string="BoM Structure" editable="top" create="0"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                             <field name="row_color" invisible="1"/>
@@ -32,7 +35,6 @@
                             <field name="supplier_ids" invisible="1"/>
                         </tree>
                     </field>
-
                 </form>
            </field>
         </record>
@@ -51,7 +53,7 @@
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="state" />
-                    <button name="%(action_choose_suppliers)d" icon="gtk-execute" type="action" attrs="{'invisible': [('state','=','done')]}"/>
+                    <button name="action_open_bom" icon="gtk-execute" type="object" attrs="{'invisible': [('state','=','done')]}"/>
                 </tree>
             </field>
         </record>
