--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -11,12 +11,16 @@
                     <field context="" name="product_id"/>
                     <field name="stock_availability"/>
                     <field name="spare"/>
-                    <field name="order_id" />
+                    <field name="sale_order_id" />
                     <field name="state" />
                     <newline/>
                     <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,supplier_id,context)"/>
                     <field name="qty"/>
                     <field name="supplier_id"/>
+                    <group colspan="8" col="8" states="draft">
+                        <button name="confirm_qty_supplier" string="OK" type="object" icon="gtk-check"/>
+                    </group>
+
                     <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4"> <!-- attrs="{'invisible': [('view_bom','=',False)]}"> -->
                         <tree string="BoM Structure" editable="top" create="0"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
@@ -52,7 +56,7 @@
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="state" />
-                    <button name="action_open_bom" icon="gtk-execute" type="object" attrs="{'invisible': [('state','=','done')]}"/>
+                    <button context="" name="action_open_bom" icon="gtk-execute" type="object" attrs="{'invisible': [('state','=','done')]}"/>
                 </tree>
             </field>
         </record>
