--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -33,7 +33,7 @@
                             <field name="product_uom" readonly="1"/>
                             <field name="stock_availability"/>
                             <field name="spare"/>
-                            <field name="is_manufactured" context="" on_change="onchange_manufacture(context)"/>
+                            <field name="is_manufactured"/>
                             <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)], 'readonly': [('is_manufactured', '=', True)]}"/>
                             <field name="supplier_ids" invisible="1"/>
                         </tree>
