--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -16,9 +16,10 @@
                     <newline/>
                     <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,supplier_id,context)"/>
                     <field name="qty"/>
-                    <field name="supplier_id"/>
+                    <field name="is_manufactured"/>
+                    <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)], 'readonly': [('is_manufactured', '=', True)]}"/>
                     <group colspan="8" col="8" states="draft">
-                        <button name="confirm_qty_supplier" string="OK" type="object" icon="gtk-check"/>
+                        <button name="confirm_suppliers" string="OK" type="object" icon="gtk-check"/>
                     </group>
 
                     <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4"> <!-- attrs="{'invisible': [('view_bom','=',False)]}"> -->
