--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -18,6 +18,7 @@
                     <field name="qty"/>
                     <field name="is_manufactured"/>
                     <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)], 'readonly': [('is_manufactured', '=', True)]}"/>
+                    <field name="supplier_ids" invisible="1"/>
                     <group colspan="8" col="8" states="draft">
                         <button name="confirm_suppliers" string="OK" type="object" icon="gtk-check"/>
                     </group>
