--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -23,7 +23,7 @@
                         <button name="confirm_suppliers" string="OK" type="object" icon="gtk-check"/>
                     </group>
 
-                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4"> <!-- attrs="{'invisible': [('view_bom','=',False)]}"> -->
+                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4" attrs="{'invisible': [('temp_mrp_bom_ids','=',False)]}">
                         <tree string="BoM Structure" editable="top" create="0"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                             <field name="row_color" invisible="1"/>
