--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -23,19 +23,19 @@
                         <button name="confirm_suppliers" string="OK" type="object" icon="gtk-check"/>
                     </group>
 
-                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4" attrs="{'invisible': [('temp_mrp_bom_ids','=',False)]}">
+                    <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4"
+                           attrs="{'invisible': [('temp_mrp_bom_ids','=',False)], 'readonly':[('is_manufactured','=',False)]}">
                         <tree string="BoM Structure" editable="top" create="0"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                             <field name="row_color" invisible="1"/>
                             <field name="sequence" invisible="1"/>
                             <field name="complete_name"/>
-                            <field name="product_id" on_change="onchange_children_product_id(product_id,product_qty,supplier_id)"/>
-                            <field name="product_type" />
+                            <field name="product_id" on_change="onchange_product_id(product_id,product_qty,supplier_id)"/>
                             <field name="product_qty" readonly="1"/>
                             <field name="product_uom" readonly="1"/>
                             <field name="stock_availability"/>
                             <field name="spare"/>
-                            <field name="is_manufactured"/>
+                            <field name="is_manufactured" on_change="onchange_manufacture(is_manufactured)"/>
                             <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)], 'readonly': [('is_manufactured', '=', True)]}"/>
                             <field name="supplier_ids" invisible="1"/>
                         </tree>
