--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -20,12 +20,13 @@
                     <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)], 'readonly': [('is_manufactured', '=', True)]}"/>
                     <field name="supplier_ids" invisible="1"/>
                     <group colspan="8" col="8" states="draft">
-                        <button name="confirm_suppliers" string="OK" type="object" icon="gtk-check"/>
+                        <button name="save_suppliers" string="Save" icon="gtk-save" type="object"/>
+                        <button name="confirm_suppliers" string="OK" icon="gtk-apply" type="object"/>
                     </group>
 
                     <field name="temp_mrp_bom_ids" type="xml" nolabel="1" colspan="4"
-                           attrs="{'invisible': [('temp_mrp_bom_ids','=',False)], 'readonly':[('is_manufactured','=',False)]}">
-                        <tree string="BoM Structure" editable="top" create="0"
+                           attrs="{'invisible': [('temp_mrp_bom_ids','=',False)], 'readonly':['|',('state','=','done'),('is_manufactured','=',False)]}">
+                        <tree string="BoM Structure" editable="top" create="false"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                             <field name="row_color" invisible="1"/>
                             <field name="sequence" invisible="1"/>
@@ -58,7 +59,7 @@
                     <field name="stock_availability"/>
                     <field name="spare"/>
                     <field name="state" />
-                    <button context="" name="action_open_bom" icon="gtk-execute" type="object" attrs="{'invisible': [('state','=','done')]}"/>
+                    <button context="" name="action_open_bom" icon="gtk-execute" type="object"/> <!-- attrs="{'invisible': [('state','=','done')]}"/> -->
                 </tree>
             </field>
         </record>
