--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -29,7 +29,7 @@
                         <tree string="BoM Structure" editable="top" create="false"
                             colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                             <field name="row_color" invisible="1"/>
-                            <field name="sequence" invisible="1"/>
+                            <!--<field name="sequence" invisible="1"/>-->
                             <field name="complete_name"/>
                             <field name="product_id" on_change="onchange_product_id(product_id,product_qty,supplier_id)"/>
                             <field name="product_qty" readonly="1"/>
