--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -226,7 +226,7 @@
 
         <record id="action_view_stock_picking" model="ir.actions.act_window">
             <field name="domain">[('sale_id', '!=', False), ('state', '!=', 'cancel'), ('type', 'in', ('internal', 'out')), ('ddt_number', '=', False)]</field>
-            <field name="context">{'nodelete': '1', 'nocreate': '1', 'noduplicate': '1'}</field>
+            <field name="context">{'nodelete': '1', 'nocreate': '1', 'noduplicate': '1', 'order': 'minimum_planned_date desc'}</field>
             <field name="name">Order Board</field>
             <field name="res_model">stock.picking</field>
             <field name="search_view_id" ref="view_stock_picking_search"/>
