--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -38,16 +38,15 @@
                                     <field name="row_color" invisible="1"/>
                                     <field name="is_leaf"/>
                                     <!-- <field name="tmp_id"/>
-                                    <field name="tmp_parent_id"/>
-                                    <field name="product_type"/>-->
+                                    <field name="tmp_parent_id"/>-->
+                                    <field name="product_type" invisible="1"/>
                                     <field name="complete_name"/>
                                     <field name="product_id" context="" on_change="onchange_product_id(product_id,product_qty,supplier_id,context)"
                                            attrs="{'readonly': [('product_type','!=','product')]}"/>
                                     <field name="product_qty" attrs="{'readonly': [('product_type','!=','product')]}"/>
-                                    <field name="product_uom" readonly="1"/>
+                                    <!-- field name="product_uom" readonly="1"/>
                                     <field name="stock_availability"/>
-                                    <field name="spare"/>
-                                    <field name="position"/>
+                                    <field name="spare"/> -->
                                     <field name="is_manufactured" on_change="onchange_manufacture(is_manufactured)"/>
                                     <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)],
                                                 'readonly': ['|',('is_manufactured', '=', True),('product_type','!=','product')]}"/>
