--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -44,9 +44,9 @@
                                     <field name="product_id" context="" on_change="onchange_product_id(product_id,product_qty,supplier_id,context)"
                                            attrs="{'readonly': [('product_type','!=','product')]}"/>
                                     <field name="product_qty" attrs="{'readonly': [('product_type','!=','product')]}"/>
-                                    <!-- field name="product_uom" readonly="1"/>
+                                    <field name="product_uom" readonly="1"/>
                                     <field name="stock_availability"/>
-                                    <field name="spare"/> -->
+                                    <field name="spare"/>
                                     <field name="is_manufactured" on_change="onchange_manufacture(is_manufactured)"/>
                                     <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)],
                                                 'readonly': ['|',('is_manufactured', '=', True),('product_type','!=','product')]}"/>
