--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -38,8 +38,8 @@
                                     <field name="row_color" invisible="1"/>
                                     <field name="is_leaf"/>
                                     <field name="id" invisible="1"/>
-                                    <field name="tmp_id"/>
-                                    <field name="tmp_parent_id"/>
+                                    <!-- field name="tmp_id"/>
+                                    <field name="tmp_parent_id"/>-->
                                     <field name="product_type" invisible="1"/>
                                     <field name="complete_name"/>
                                     <field name="product_id" context="" on_change="onchange_temp_product_id(product_id,product_qty,supplier_id,context)"
@@ -50,7 +50,8 @@
                                     <field name="spare"/>
                                     <field name="is_manufactured" on_change="onchange_manufacture(is_manufactured)"/>
                                     <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)],
-                                                'readonly': ['|',('is_manufactured', '=', True),('product_type','!=','product')]}"/>
+                                                'readonly': ['|',('is_manufactured', '=', True),
+                                                                 ('product_type','!=','product')]}"/>
                                     <field name="supplier_ids" invisible="1"/>
                                 </tree>
                             </field>
