--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -40,16 +40,18 @@
                                     <field name="id" invisible="1"/>
                                     <!-- field name="tmp_id"/>
                                     <field name="tmp_parent_id"/>-->
-                                    <field name="product_type" invisible="1"/>
-                                    <field name="complete_name"/>
+                                    <field name="product_type" />
+                                    <field name="level_name"/>
                                     <field name="product_id" context="" on_change="onchange_temp_product_id(product_id,product_qty,supplier_id,context)"
                                            attrs="{'readonly': [('product_type','!=','product')]}"/>
                                     <field name="product_qty" attrs="{'readonly': [('product_type','!=','product')]}"/>
                                     <field name="product_uom" readonly="1"/>
                                     <field name="stock_availability"/>
                                     <field name="spare"/>
-                                    <field name="is_manufactured" on_change="onchange_manufacture(is_manufactured)"/>
-                                    <field name="supplier_id" attrs="{'required': [('is_manufactured', '=', False)],
+                                    <field name="cost"/>
+                                    <field name="is_manufactured" on_change="onchange_temp_manufacture(is_manufactured)"/>
+                                    <field name="supplier_id" on_change="onchange_temp_supplier_id(supplier_id,product_id)"
+                                           attrs="{'required': [('is_manufactured', '=', False)],
                                                 'readonly': ['|',('is_manufactured', '=', True),
                                                                  ('product_type','!=','product')]}"/>
                                     <field name="supplier_ids" invisible="1"/>
