--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -47,7 +47,7 @@
                                            attrs="{'readonly': [('product_type','!=','product')]}"/>
                                     <field name="product_qty" attrs="{'readonly': [('product_type','!=','product')]}"/>
                                     <field name="product_uom" readonly="1"/>
-                                    <field name="routing_id"/>
+                                    <field name="mrp_routing_id"/>
                                     <field name="stock_availability"/>
                                     <field name="spare"/>
                                     <field name="cost"/>
@@ -62,10 +62,10 @@
                         </page>
                         <page string="Routing">
                             <field name="temp_mrp_bom_routing_ids" type="xml" nolabel="1" colspan="4" context="">
-                                <field name="row_color" invisible="1"/>
                                 <tree string="BoM Routing" editable="top" create="false"
                                     colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
-                                    <field name="routing_id"/>
+                                    <field name="row_color" invisible="1"/>
+                                    <field name="mrp_routing_id"/>
                                     <field name="sequence"/>
                                     <field name="workcenter_id"/>
                                     <field name="name"/>
